--- a/index.html
+++ b/index.html
@@ -487,131 +487,333 @@
 
 
 
-
-<!-- 
-    <div class="container">
+    <div class="container ">
         <div class="row">
-           <div class="col-lg-3 col-md-6">
-            <div>
-                <img src="./image/Alex.jpg" alt="">
-               </div>
-                <div class=" align-items-end">
-                    <h5 class="align-items-end">Alex Maxwel</h5>
-                    <p>CEO/Managing Dictor</p>
+            <div class="col-sm-12 col-md-6 col-lg-3">
+                <div class="mt-4">
+                    <div class=" text-center ">
+                        <img class="img-fluid dolar rounded-top" src="./image/Alex.jpg" alt="">
+                    </div>
+                    <div class="bg-light text-center rounded-bottom py-3  border-top-0">
+                        <h5 class=" clr fw-bold">Alex Maxwel</h5>
+                        <p class="clr ">CEO/Managing Dictor</p>
+                    </div>
                 </div>
-           </div>
 
-
-           <div class="col-lg-3 col-md-6">
-            <div>
-                <img src="./image/Alex.jpg" alt="">
-               </div>
-                <div class=" align-items-end">
-                    <h5 class="align-items-end">Alex Maxwel</h5>
-                    <p>CEO/Managing Dictor</p>
+            </div>
+            <div class="col-sm- col-md-6 col-lg-3 d-none d-md-block">
+                <div class="mt-4">
+                    <div class=" ">
+                        <img class="img-fluid rounded-top" src="./image/justin.jpg" alt="">
+                    </div>
+                    <div class="bg-light text-center py-3 border-top-0 rounded-bottom">
+                        <h5 class="clr fw-bold">Justin Roberto</h5>
+                        <p class="clr">Manager</p>
+                    </div>
                 </div>
-           </div>
 
+            </div>
 
-           <div class="col-lg-3 col-md-6">
-            <div>
-                <img class="img-fluid" src="./image/Alex.jpg" alt="">
-               </div>
-                <div class=" align-items-end">
-                    <h5 class="align-items-end">Alex Maxwel</h5>
-                    <p>CEO/Managing Dictor</p>
+            <div class="col-sm- col-md-6 col-lg-3 d-none d-md-block">
+                <div class="mt-4">
+                    <div class=" ">
+                        <img class="img-fluid rounded-top" src="image/louis.jpg" alt="">
+                    </div>
+                    <div class="bg-light text-center py-3 border-top-0 rounded-bottom">
+                        <h5 class="clr fw-bold">Louis Agassiz</h5>
+                        <p class="clr">Oragnic Farmer</p>
+                    </div>
                 </div>
-           </div>
 
+            </div>
 
-           <div class="col-lg-3 col-md-6">
-            <div>
-                <img src="./image/Alex.jpg" alt="">
-               </div>
-                <div class=" align-items-end">
-                    <h5 class="align-items-end">Alex Maxwel</h5>
-                    <p>CEO/Managing Dictor</p>
+            <div class="col-sm- col-md-6 col-lg-3 d-none d-md-block">
+                <div class="mt-4">
+                    <div class=" rounded-top">
+                        <img class="img-fluid rounded-top" src="/image/carl.jpg" alt="">
+                    </div>
+                    <div class="bg-light text-center py-3 border-top-0 rounded-bottom">
+                        <h5 class="clr fw-bold">Carl Anderson</h5>
+                        <p class="clr">Agriculturist</p>
+                    </div>
                 </div>
-           </div>
+            </div>
 
+            <div class="text-center mt-5">
+                <iconify-icon class=" bor bkg rounded-circle bkg fs-6 fw-medium"
+                    icon="material-symbols-light:stop-rounded"></iconify-icon>
 
+                <iconify-icon class=" mx-2 rounded-circle clr fs-6 fw-medium"
+                    icon="material-symbols-light:stop-rounded"></iconify-icon>
+
+                <iconify-icon class="rounded-circle clr fs-6 fw-medium"
+                    icon="material-symbols-light:stop-rounded"></iconify-icon>
+
+            </div>
         </div>
     </div>
-    </div>
+
+
+
+    <!-- 
+What our Clients are Saying
  -->
+    <div class="bg-body-tertiary bdn">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6 col-md-6 col-lg-6 ">
+                    <img class="img-fluid" src="./image/grils food.png" alt="">
+                </div>
 
 
- <div class="container ">
-    <div class="row">
-        <div class="col-sm-12 col-md-6 col-lg-3">
-            <div class="mt-4">
-                <div class=" text-center ">
-                    <img class="img-fluid dolar"src="./image/Alex.jpg" alt="">
-                </div>
-                <div class="text-center py-4">
-                    <h5 class="align-items-end">Alex Maxwel</h5>
-                    <p>CEO/Managing Dictor</p>
-                </div>
-            </div>
+                <div class="col-sm-6 col-md-6 col-lg-6">
+                    <h1 class="fw-bold clr mt-5">What our Clients are <br>
+                        <span class="bkg">Saying</span>
+                    </h1>
 
-        </div>
-        <div class="col-sm- col-md-6 col-lg-3 d-none d-md-block">
-            <div class="mt-4">
-                <div class=" ">
-                  <img class="img-fluid rounded-top" src="./image/justin.jpg" alt="">
-                </div>
-                <div class="text-center py-4">
-                    <h5 class="align-items-end">Alex Maxwel</h5>
-                    <p>CEO/Managing Dictor</p>
-                </div>
-            </div>
 
-        </div>
+                    <p class="text-body-secondary mt-5">This is one of the best themes I have ever worked with. The
+                        extra
+                        bells and <br> whistles added to it
+                        are amazing. Elementor features add extra flavor. The <br>
+                        customer support is very responsive and amazing.</p>
 
-        <div class="col-sm- col-md-6 col-lg-3 d-none d-md-block">
-            <div class="mt-4">
-                <div class=" ">
-                    <img class="img-fluid" src="image/louis.jpg" alt="">
-                </div>
-                <div class="text-center py-4">
-                    <h5 class="align-items-end">Alex Maxwel</h5>
-                    <p>CEO/Managing Dictor</p>
-                </div>
-            </div>
+                    <div class="my-5">
+                        <span class="fw-bold clr fs-5">Alisha Preston</span>
+                        <p class="text-body-secondary">Managing Director</p>
+                    </div>
 
-        </div>
+                    <div>
+                        <iconify-icon class="clr mx-3 border fs-4 py-2 px-2 btn btn-outline-success "
+                            icon="mingcute:arrow-left-line"></iconify-icon>
+                        <iconify-icon class="clr fs-4 py-2 px-2 border btn btn-outline-success "
+                            icon="mingcute:arrow-right-line"></iconify-icon>
+                    </div>
 
-        <div class="col-sm- col-md-6 col-lg-3 d-none d-md-block">
-            <div class="mt-4">
-                <div class=" rounded-top">
-                    <img class="img-fluid" src="/image/carl.jpg" alt="">
-                </div>
-                <div class="text-center py-4">
-                    <h5 class="align-items-end">Alex Maxwel</h5>
-                    <p>CEO/Managing Dictor</p>
                 </div>
             </div>
         </div>
-
-      <div class="text-center">
-        <iconify-icon class=" bor bkg rounded-circle bkg fs-6 fw-medium" icon="material-symbols-light:stop-rounded"></iconify-icon>
-
-        <iconify-icon class=" mx-2 rounded-circle clr fs-6 fw-medium" icon="material-symbols-light:stop-rounded"></iconify-icon>
-
-        <iconify-icon class="rounded-circle clr fs-6 fw-medium" icon="material-symbols-light:stop-rounded"></iconify-icon>
-
-      </div>
     </div>
-</div>
+
+
+    <!-- Latest News & Blog -->
+
+
+    <div class="text-center mt-5">
+        <h1 class="fw-bold clr size"><span class="bkg">Latest </span> News & Blog</h1>
+        <p class="text-body-secondary">Follow our latest news and thoughts which focuses exclusively on design, art,
+            <br> vintage, and also work updates.
+        </p>
+    </div>
 
 
 
+    <div class="container mt-5">
+        <div class="row">
+            <!-- First Card -->
+            <div class="col-md-4">
+                <div class="card border-0 Regular shadow mt-3">
+                    <img src="./image/gril.jpg" class="card-img-top" alt="Image 1">
+                    <div class="card-body">
+
+
+                        <div class="d-flex justify-content-between">
+                            <div class="col-">
+                                <div class="d-flex">
+                                    <iconify-icon class="me-2 text-success fs-5 fw-bold"
+                                        icon="material-symbols:folder-open"></iconify-icon>
+                                    <p class="text-body-secondary">Fresh meet</p>
+                                </div>
+                            </div>
 
 
 
+                            <div class="d-flex">
+                                <iconify-icon class="text-center text-success fs-5 fw-bold"
+                                    icon="solar:calendar-line-duotone"></iconify-icon>
+                                <p class="ms-2 text-body-secondary">Marech 17, 2021</p>
+                            </div>
+                        </div>
 
-    <div class="mt-5">
-        ggg
+                        <h4 class="clr fw-bold mt-2">Our 6 of the Best Organic Chocolates to Buy.</h4>
+                        <button type="button" class="clr my-3 fw-bold btn btn-outline-success py-2 px-4">Read
+                            More</button>
+                    </div>
+                </div>
+            </div>
+            <!-- Second Card -->
+            <div class="col-md-4 d-none d-md-block">
+                <div class="card border-0 Regular shadow mt-3">
+                    <img src="./image/Meet.jpg" class="card-img-top" alt="Image 1">
+                    <div class="card-body">
+
+
+                        <div class="d-flex justify-content-between">
+                            <div class="col-">
+                                <div class="d-flex">
+                                    <iconify-icon class="me-2 text-success fs-5 fw-bold"
+                                        icon="material-symbols:folder-open"></iconify-icon>
+                                    <p class="text-body-secondary">Grocery & Frozen</p>
+                                </div>
+                            </div>
+
+
+
+                            <div class="d-flex">
+                                <iconify-icon class="text-center text-success fs-5 fw-bold"
+                                    icon="solar:calendar-line-duotone"></iconify-icon>
+                                <p class="ms-2 text-body-secondary">Marech 17,2021</p>
+                            </div>
+                        </div>
+
+                        <h4 class="clr fw-bold mt-2">Best guide to shopping for oragnic ingredients.</h4>
+                        <button type="button" class="clr my-3 fw-bold btn btn-outline-success py-2 px-4">Read
+                            More</button>
+                    </div>
+                </div>
+            </div>
+            <!-- Third Card -->
+            <div class="col-md-4 d-none d-md-block ">
+                <div class="card border-0 Regular shadow mt-3">
+                    <img src="./image/Frozen.jpg" class="card-img-top" alt="Image 1">
+                    <div class="card-body">
+
+
+                        <div class="d-flex justify-content-between">
+                            <div class="col-">
+                                <div class="d-flex">
+                                    <iconify-icon class="me-2 text-success fs-5 fw-bold"
+                                        icon="material-symbols:folder-open"></iconify-icon>
+                                    <p class="text-body-secondary">Grocery & Frozen</p>
+                                </div>
+                            </div>
+
+
+
+                            <div class="d-flex">
+                                <iconify-icon class="text-center text-success fs-5 fw-bold"
+                                    icon="solar:calendar-line-duotone"></iconify-icon>
+                                <p class="ms-2 text-body-secondary">Marech 17, 2021</p>
+                            </div>
+                        </div>
+
+                        <h4 class="clr fw-bold mt-2">Zechsal Magnesium <br> flakes especially made.</h4>
+                        <button type="button" class="clr my-3 fw-bold btn btn-outline-success py-2 px-4">Read
+                            More</button>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="text-center mt-5">
+                <iconify-icon class=" bor bkg rounded-circle bkg fs-6 fw-medium"
+                    icon="material-symbols-light:stop-rounded"></iconify-icon>
+
+                <iconify-icon class=" mx-2 rounded-circle clr fs-6 fw-medium"
+                    icon="material-symbols-light:stop-rounded"></iconify-icon>
+
+                <iconify-icon class="rounded-circle clr fs-6 fw-medium"
+                    icon="material-symbols-light:stop-rounded"></iconify-icon>
+
+            </div>
+        </div>
+    </div>
+
+    <!-- footer-section -->
+
+    <div class="footer  text-white mt-5">
+        <div class="container">
+            <div class="row">
+
+                <!-- first  -->
+                <div class="col-md-4 col-sm-6 mtb">
+                    <img class="text-white" width="150" src="./image/footer logo.png" alt="">
+
+                    <div>
+                        <p class="mt-4">The variety of products available at our store <br>
+                            at the moment is vast, but we still continue to <br>
+                            widen our assortment.</p>
+                    </div>
+
+                    <div class="mt-4">
+                        <iconify-icon class=" hvr bg-white text-black fw-bold fs-5 rounded-circle py-2 px-2"
+                            icon="flowbite:facebook-solid"></iconify-icon>
+                        <iconify-icon class="ms-1 text-black bg-white  border fw-bold fs-5 rounded-circle py-2 px-2"
+                            icon="mdi:twitter"></iconify-icon>
+                        <iconify-icon class="ms-1 text-black bg-white border fw-bold fs-5 rounded-circle py-2 px-2"
+                            icon="flowbite:facebook-solid"></iconify-icon>
+                        <iconify-icon class="ms-1 text-black bg-white border fw-bold fs-5 rounded-circle py-2 px-2"
+                            icon="mdi:twitter"></iconify-icon>
+
+                    </div>
+                </div>
+
+                <!-- second -->
+
+                <div class="col-md-3 col-sm-6  mt-3">
+                    <div class="mtb">
+                        <h5 class="fw-bold">Information</h5>
+                        <div class="ddd mt-2"></div>
+                        <div class="mt-3">
+                            <p class="">Specials</p>
+                            <p>Wishlist</p>
+                            <p>Compare</p>
+                            <p>Our Stores</p>
+                            <p>About Us</p>
+                            <p>Contact Us</p>
+                        </div>
+                    </div>
+
+                </div>
+
+                <!-- third  -->
+                <div class="col-md-3 col-sm-6  mt-3">
+                    <div class="mtb">
+                        <h5 class="fw-bold">Categories</h5>
+                        <div class="ddd mt-2"></div>
+                        <div class="mt-3">
+                            <p>Bread & Bakery</p>
+                            <p>Grocery & Frozen</p>
+                            <p>Fresh Fruits</p>
+                            <p>Fresh Meats</p>
+                            <p>Organic</p>
+                            <p>Recipies</p>
+                        </div>
+                    </div>
+
+                </div>
+
+                <!-- forth  -->
+                <div class="col-md-2 col-sm-6 mt-3">
+                    <div class="mtb">
+                        <h5 class="fw-bold">My Account</h5>
+                        <div class="ddd mt-2"></div>
+                        <div class="mt-3">
+                            <p>My Account</p>
+                            <p>Order History</p>
+                            <p>Wishlist</p>
+                            <p>Specials</p>
+                            <p>Newsletter</p>
+                            <p>About Us</p>
+                        </div>
+                    </div>
+
+                </div>
+
+
+
+            </div>
+        </div>
+    </div>
+
+    <div>
+        <div class="container mt-3">
+            <div class="d-flex justify-content-between">
+                <p class="clr fw-medium">© 2024 Organio – <span class="text-success">CaseThemes</span>. All rights reserved.</p>
+                <img height="22px" src="./image/ftr.png" alt="">
+          
+            </div>
+        </div>
     </div>
     <script src="./index.js"></script>
 </body>
